-Adjusted the bitmask to the RGBA conversion algorithm to apply the compromise among different semi-transparent textures (@Wohlstand)
-Fixed an invalid byte hacking behaviour at the memory emulator on x86_32 processors (@Wohlstand)
-Fixed the validation of  assets packages on Android where "introset"-based assets were treated as invalid (@Wohlstand)
-The new font engine based on the Moondust Engine implementation has been added. Now,  the game can print Unicode text in a condition where the assets package contains the necessary font resources. (@Wohlstand, @ds-sloth)
-Added animation for keyhole exit. (@ds-sloth)
-Added ShowLevelName and ShowLevelFile LunaScript commands (@Wohlstand)

Changelog for 1.3.6
-Added an ability to toggle drawing of the HUD and other on-screen meta data using F1 key (@Wohlstand)
-Added an ability to type cheats on touchscreen using special new cheats key (@Wohlstand, @ds-sloth)
-Added native support for LunaDLL Autocode script language (@Wohlstand)
-Added deaths counter feature (keeps counting of deaths per game save) (@Wohlstand)
-Reworked the controllers support (@ds-sloth)
-Touchscreen support for non-Android platforms (@ds-sloth)
-Added ability to save multiple keyboard profiles (@ds-sloth)
-New multiplayer start screen (@ds-sloth with design input from @0lhi)
-Added controller disconnect recovery screen (@ds-sloth)
-Ground pound by alt run is now a per-controller setting (@ds-sloth)
-Added an ability to add/drop the second player from the pause menu (@ds-sloth)
-Added the support for real-time audio effects such as reverb and SPC echo. They can be configured by sounds.ini for each level section (@Wohlstand)
-Performance improvements for showing, hiding, and moving layers (@ds-sloth)
-Reduced game object memory footprint (@ds-sloth)
-Performance improvements when run on slow filesystems (@ds-sloth)
-Fixed unexpected music got started after the level got entered too quick from the world map (@Wohlstand)