@@ -35,7 +35,7 @@ class GFX_t
     //! Holder of loaded textures for easier clean-up
     std::vector<StdPicture*> m_loadedImages;
     //! Capacity of the m_isCustom array (update when new assets are added)
-    static constexpr size_t m_isCustomVolume = 67;
+    static constexpr size_t m_isCustomVolume = 68;
     //! Holder of "is custom" flag
     bool m_isCustom[m_isCustomVolume];
 
@@ -75,7 +75,10 @@ public:
     RangeArr<StdPicture, 1, 2> Tongue;
     StdPicture Warp;
     StdPicture YoshiWings;
+
+    // new graphics for TheXTech
     StdPicture EIcons;
+    StdPicture PCursor;
 
     bool &isCustom(size_t i);
 };
