@@ -277,8 +277,17 @@ void Render()
         SuperPrint(s_items[i].name, 3, menu_left_X, menu_top_Y + (i * 36));
     }
 
-    if(s_pause_plr == 2 && !s_is_legacy)
-        XRender::renderTextureFL(menu_left_X - 20, menu_top_Y + (MenuCursor * 36), GFX.MCursor[1].w, GFX.MCursor[1].h, GFX.MCursor[1], 0, 0, 90.0, nullptr, X_FLIP_NONE, 0.0, 1.0, 0.0);
+    if(GFX.PCursor.inited)
+    {
+        if(s_pause_plr == 2 && !s_is_legacy)
+            XRender::renderTexture(menu_left_X - 20, menu_top_Y + (MenuCursor * 36), GFX.PCursor, 0.0, 1.0, 0.0);
+        else if(s_pause_plr != 1 && !s_is_legacy)
+            XRender::renderTexture(menu_left_X - 20, menu_top_Y + (MenuCursor * 36), GFX.PCursor);
+        else
+            XRender::renderTexture(menu_left_X - 20, menu_top_Y + (MenuCursor * 36), GFX.PCursor, 1.0, 0.0, 0.0);
+    }
+    else if(s_pause_plr == 2 && !s_is_legacy)
+        XRender::renderTexture(menu_left_X - 20, menu_top_Y + (MenuCursor * 36), 16, 16, GFX.MCursor[3], 0, 0);
     else
         XRender::renderTexture(menu_left_X - 20, menu_top_Y + (MenuCursor * 36), 16, 16, GFX.MCursor[0], 0, 0);
 }
