@@ -19,9 +19,12 @@ Changelog for 1.3.6.1
 -Adjusted the bitmask to the RGBA conversion algorithm to apply the compromise among different semi-transparent textures (@Wohlstand)
 -Fixed an invalid byte hacking behaviour at the memory emulator on x86_32 processors (@Wohlstand)
 -Fixed the validation of  assets packages on Android where "introset"-based assets were treated as invalid (@Wohlstand)
--The new font engine based on the Moondust Engine implementation has been added. Now,  the game can print Unicode text in a condition where the assets package contains the necessary font resources. (@Wohlstand, @ds-sloth)
+-The new font engine based on the Moondust Engine implementation has been added. Now, the game can print Unicode text in a condition where the assets package contains the necessary font resources. (@Wohlstand, @ds-sloth)
 -Added animation for keyhole exit. (@ds-sloth)
 -Added ShowLevelName and ShowLevelFile LunaScript commands (@Wohlstand)
+-An uncolored PCursor.png is now automatically colored and used for indicating player menu selections; MCursor0.png and MCursor3.png are used as fallbacks. (@ds-sloth)
+-The pause menu cursor is now colored based on which player is in control of the pause menu. (@ds-sloth)
+-If controller inputs are displayed onscreen, Player 2's controller is now shown at the world map screen. (@ds-sloth, @0lhi)
 
 Changelog for 1.3.6
 -Added an ability to toggle drawing of the HUD and other on-screen meta data using F1 key (@Wohlstand)
